Done some tunning

--- a/css/scss/components/_contact-us.scss
+++ b/css/scss/components/_contact-us.scss
@@ -81,6 +81,28 @@ Contact Us Page CSS End
     }
   }
   //Banner Section CSS End
+
+  .contact-form-section {
+    .contact-form {
+      padding: 30px;
+      .form-section {
+        margin-top: 0;
+        .input-field {
+          input {
+            margin-top: 7px;
+            padding: 7px 0;
+          }
+        }
+        .submit-btn {
+          margin-top: 20px;
+        }
+      }
+    }
+
+    .contact-info {
+      padding: 60px 30px;
+    }
+  }
 }
 
 //Medium Device CSS start
@@ -171,7 +193,8 @@ Contact Us Page CSS End
   .banner-section {
     &.nearby-banner {
       .container {
-        min-height: 300px;
+        min-height: unset;
+        padding: 40px 20px;
       }
     }
   }
