--- a/css/scss/components/_faqs.scss
+++ b/css/scss/components/_faqs.scss
@@ -149,7 +149,8 @@ FAQs Page CSS End
   .banner-section {
     &.faqs-banner {
       .container {
-        min-height: 300px;
+        min-height: unset;
+        padding: 40px 20px;
       }
     }
   }
