--- a/css/scss/components/_gms-table.scss
+++ b/css/scss/components/_gms-table.scss
@@ -58,6 +58,7 @@
 
       &.size {
         color: #828282;
+        font-size: 32px;
         font-weight: 600;
       }
 
@@ -70,6 +71,7 @@
 
       &.price {
         color: #0601ff;
+        font-size: 32px;
         font-weight: 600;
         padding-left: 20px;
       }
